--- a/footer_style.css
+++ b/footer_style.css
@@ -65,7 +65,7 @@
   .footer__container-row-section-item {
     font-size: 20px;
     margin-bottom: 8px;
-    color: var(--text-color-item-footer);
+    color: var(--text-color);
   }
   
   .footer__container-row-subscribe {
